2008-04-22  Juanma Barranquero  <lekktu@gmail.com>

	* minibuffer.el (minibuffer-complete-and-exit): Fix last change.

2008-04-22  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (emacs-deps): Define.
	Use it instead of $(lisp)/subdirs.el.

2008-04-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-next-action): Do not consider directories when
	checking for state compatibility.
	(vc-transfer-file): Use when not if.
	(vc-dir-parent-marked-p, vc-dir-children-marked-p): New functions.
	(vc-dir-mark-file): Use them.
	(vc-deduce-fileset): Also return the backend.
	(vc-diff-internal): Take as argument the value returned by
	vc-deduce-fileset instead of just the fileset.
	(vc-next-action, vc-finish-logentry, vc-version-diff, vc-diff)
	(vc-dir-mark-file, vc-print-log, vc-revert, vc-rollback)
	(vc-update): Update the vc-deduce-fileset and vc-diff-internal calls.

2008-04-22  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-scroll-up-or-next-page): Don't use
	set-window-vscroll but image-scroll-down.  Fixes a bug where a
	command following SPC scrolled up again.

2008-04-22  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-locals-header): New variable.
	(gdb-locals-mode, gdb-registers-mode): Use it for header line.
	(gud-watch): Add "$" prefix when in registers buffer.

2008-04-22  Glenn Morris  <rgm@gnu.org>

	* progmodes/gdb-ui.el (gdbmi-invalidate-frames): Declare as function.

	* whitespace.el (whitespace-display-table)
	(whitespace-display-table-was-local): Move definitions before use.

	* emacs-lisp/copyright.el (copyright-at-end-flag): New option.
	(copyright-limit): Respect copyright-at-end-flag.
	(copyright-re-search, copyright-start-point)
	(copyright-offset-too-large-p): New functions.
	(copyright-update-year): Use copyright-re-search.
	(copyright-update, copyright-fix-years): Use copyright-start-point,
	and copyright-re-search.
	(copyright): Use copyright-offset-too-large-p.