@@ -1,3 +1,7 @@
+2008-04-22  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* info.el (Info-complete-menu-item): Save point.
+
 2008-04-22  Juanma Barranquero  <lekktu@gmail.com>
 
 	* minibuffer.el (minibuffer-complete-and-exit): Fix last change.
